--- a/XeppIT.ZoneElectrical/Project/Pages/ProjectsPage.razor
+++ b/XeppIT.ZoneElectrical/Project/Pages/ProjectsPage.razor
@@ -126,7 +126,7 @@ else
 
     void GoToNewProjectPage()
     {
-        ProjectEditState.ProjectToEdit = new ProjectModel();
+        ProjectEditState.ProjectToEdit = null;
         NavigationManager.NavigateTo("NewProject");
     }
 
