--- a/XeppIT.ZoneElectrical/Shared/XInput.razor
+++ b/XeppIT.ZoneElectrical/Shared/XInput.razor
@@ -1,4 +1,4 @@
-﻿<div class="XInput">
+﻿<div class="form-group">
     <label for="@Id">@Label</label>
     <input class="form-control @CustomCss @_isValid" id="@Id" placeholder="@Placeholder" value="@Value" @oninput="HandleInput">
     <div class="invalid-feedback">
