--- a/XeppIT.ZoneElectrical/Pages/Index.razor
+++ b/XeppIT.ZoneElectrical/Pages/Index.razor
@@ -11,7 +11,8 @@ Welcome to your new app.
 <label>@boobs</label>
 
 <XSelect @bind-ListSelectedValue="@SelectedValue" Data="@list" TItem=Model ValidationRule="@SelectValidationRule" />
-    
+
+<Component1></Component1>
 
 
 <label>@SelectedValue.ToString()</label>
