--- a/XeppIT.ZoneElectrical/Pages/_Host.cshtml
+++ b/XeppIT.ZoneElectrical/Pages/_Host.cshtml
@@ -17,6 +17,7 @@
 
     <link href="_content/Blazorise/blazorise.css" rel="stylesheet" />
     <link href="_content/Blazorise.Bootstrap/blazorise.bootstrap.css" rel="stylesheet" />
+    <link href="_content/XeppIT.SimpleBlazorBootstrap/styles.css" rel="stylesheet" />
     <link href="css/site.css" rel="stylesheet" />
 </head>
 <body>
